--- a/app/src/main/res/layout/grid_imageview.xml
+++ b/app/src/main/res/layout/grid_imageview.xml
@@ -3,6 +3,7 @@
     android:id="@+id/movie_gridview_imaage"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:clickable="true"
+    android:focusable="true"
     android:layout_width="match_parent"
     android:layout_height="280dp"
     android:scaleType="fitXY">
