--- a/app/src/main/res/layout/grid_imageview.xml
+++ b/app/src/main/res/layout/grid_imageview.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/movie_gridview_imaage"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:clickable="true"
-    android:focusable="true"
     android:layout_width="match_parent"
     android:layout_height="280dp"
+    android:clickable="true"
+    android:focusable="true"
     android:scaleType="fitXY">
 
 </ImageView>
