--- a/app/src/main/res/layout/spinner_textview.xml
+++ b/app/src/main/res/layout/spinner_textview.xml
@@ -2,7 +2,7 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="start"
+    android:layout_height="?android:attr/actionBarSize"
+    android:gravity="center_vertical"
     android:textColor="#fff"
-    android:textSize="20sp" />
+    android:textSize="18sp" />
