--- a/app/src/main/res/layout/spinner_textview.xml
+++ b/app/src/main/res/layout/spinner_textview.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
     android:gravity="center_vertical"
-    android:textColor="#fff"
+    android:textColor="@color/white"
     android:textSize="18sp" />
