--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#9C27B0</color>
     <color name="colorPrimaryDark">#6A1B9A</color>
     <color name="colorAccent">#E040FB</color>
+
+    <color name="white">#fff</color>
+
+    <color name="black">#000</color>
 </resources>
